replace(salad, alloy): avoid css contamination
避免共存时发生的css污染。

--- a/src/content/content.scss
+++ b/src/content/content.scss
@@ -9,7 +9,7 @@
     Base
 \*-----------------------------------------------*/
 :root:root:root:root:root {
-  .saladict-DIV {
+  .alloydict-DIV {
     @extend %reset-important;
   }
 }
