--- a/src/quick-search/quick-search.scss
+++ b/src/quick-search/quick-search.scss
@@ -1,8 +1,8 @@
 html,
 body,
 #frame-root,
-.saladict-DIV,
-.saladict-DictPanel {
+.alloydict-DIV,
+.alloydict-DictPanel {
   position: static;
   height: 100%;
   margin: 0;
