Implement: Fold UnFold Menu Items
Minor UI Adjust: Tweak Title Color, 交换多行编辑器与音频控制器之展开按钮与展开内容之序。

--- a/src/content/components/MenuBar/_style.scss
+++ b/src/content/components/MenuBar/_style.scss
@@ -5,7 +5,7 @@
   height: 30px;
   font-size: 14px;
   //background-color: rgb(92, 175, 158);
-  background: linear-gradient(to top, #7f91f5, #4f7eff);
+  background: linear-gradient(to top, #5972ff, #4f7eff);
 }
 
 .panel-MenuBar_Btn {
