--- a/src/content/components/WordEditor/_style.scss
+++ b/src/content/components/WordEditor/_style.scss
@@ -71,7 +71,7 @@ textarea {
     Components
 \*-----------------------------------------------*/
 .wordEditor-Container {
-  width: 800px;
+  width: 75%;
   border-radius: 6px;
   background: #fff;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
